# sail-benchmark

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  run-all.sh  run-benchmarks.sh  vcpkg.json
extra/: build.sh
report/: sail-benchmark.xlsx
src/: benchmarks.h  color.h  fail.h  sail-benchmark-cimg.cpp  sail-benchmark-devil.cpp  sail-benchmark-freeimage.cpp  sail-benchmark-gdk-pixbuf.cpp  sail-benchmark-gil.cpp  sail-benchmark-graphicsmagick.cpp  sail-benchmark-opencv.cpp  sail-benchmark-openimageio.cpp  sail-benchmark-sail.cpp  sail-benchmark-sdl.cpp  sail-benchmark-stb.cpp  sail-benchmark-wic.cpp
